fixed dropdown-menu bleed

--- a/styles/about.css
+++ b/styles/about.css
@@ -31,7 +31,12 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-  background: linear-gradient(180deg, #1C299D 0%, rgba(65, 81, 226, 0.41) 99.99%, rgba(217, 217, 217, 0.00) 100%);
+  background: linear-gradient(
+    180deg,
+    #1c299d 0%,
+    rgba(65, 81, 226, 0.41) 99.99%,
+    rgba(217, 217, 217, 0) 100%
+  );
 }
 
 .navbar a {
@@ -42,7 +47,7 @@ body {
 }
 
 .title {
-  color: #FFF;
+  color: #fff;
   font-family: Inter, sans-serif;
   font-size: 36px;
   font-style: normal;
@@ -55,18 +60,17 @@ body {
 }
 
 .navbarfont {
-  color: #FFF;
+  color: #fff;
   font-family: Inter, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: 2;
-  transition : 0.5s;
+  transition: 0.5s;
 }
 
 .navbar-toggler-icon {
-  background-image: url(
-"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .navbar-toggler:focus {
@@ -78,8 +82,21 @@ body {
   border: none;
 }
 
-.collapse.show{
-  background: #1C299D;
+.dropdown-item {
+  margin: 10px;
+  transition: 5ms;
+}
+
+.dropdown-menu {
+  padding-right: 15px;
+  margin: 10px;
+}
+.dropdown-menu a:hover {
+  color: rgb(226, 147, 1);
+}
+
+.collapse.show {
+  background: #111859;
   transition: 0.5s;
 }
 
@@ -89,11 +106,11 @@ body {
 
 .logo img {
   height: 50px;
-  width:  50px;
+  width: 50px;
   margin: 5%;
 }
 
-  /* End of Navbar */
+/* End of Navbar */
 
 .about-text {
   display: flex;
@@ -148,28 +165,27 @@ body {
 }
 
 @media all and (max-width: 630px) {
- 
   /* Navbar */
-   .navbar {
-     width: 100%;
-   }
- 
-   .logo img {
-     margin: 10px;
-     height: 40px;
-     width: 40px; 
-   }
- 
-   .title {
-     color: #FFF;
-     font-family: Inter, sans-serif;
-     font-size: 26px;
-     font-style: normal;
-     font-weight: 400;
-     line-height: 2.2;
-   }
- 
-    /* End of Navbar */
+  .navbar {
+    width: 100%;
+  }
+
+  .logo img {
+    margin: 10px;
+    height: 40px;
+    width: 40px;
+  }
+
+  .title {
+    color: #fff;
+    font-family: Inter, sans-serif;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 2.2;
+  }
+
+  /* End of Navbar */
 
   .about-image {
     max-width: 60%;
