--- a/styles/index.css
+++ b/styles/index.css
@@ -31,7 +31,12 @@ body {
   display: flex;
   align-items: center;
   text-align: center;
-  background: linear-gradient(180deg, #1C299D 0%, rgba(65, 81, 226, 0.41) 99.99%, rgba(217, 217, 217, 0.00) 100%);
+  background: linear-gradient(
+    180deg,
+    #1c299d 0%,
+    rgba(65, 81, 226, 0.41) 99.99%,
+    rgba(217, 217, 217, 0) 100%
+  );
 }
 
 .navbar a {
@@ -42,7 +47,7 @@ body {
 }
 
 .title {
-  color: #FFF;
+  color: #fff;
   font-family: Inter, sans-serif;
   font-size: 36px;
   font-style: normal;
@@ -54,19 +59,31 @@ body {
   color: orange;
 }
 
+.dropdown-item {
+  margin: 10px;
+  transition: 5ms;
+}
+
+.dropdown-menu {
+  padding-right: 15px;
+  margin: 10px;
+}
+.dropdown-menu a:hover {
+  color: rgb(226, 147, 1);
+}
+
 .navbarfont {
-  color: #FFF;
+  color: #fff;
   font-family: Inter, sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: 400;
   line-height: 2;
-  transition : 0.5s;
+  transition: 0.5s;
 }
 
 .navbar-toggler-icon {
-  background-image: url(
-"data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .navbar-toggler:focus {
@@ -78,8 +95,8 @@ body {
   border: none;
 }
 
-.collapse.show{
-  background: #1C299D;
+.collapse.show {
+  background: #111859;
   transition: 0.5s;
 }
 
@@ -89,11 +106,11 @@ body {
 
 .logo img {
   height: 50px;
-  width:  50px;
+  width: 50px;
   margin: 5%;
 }
 
-  /* End of Navbar */
+/* End of Navbar */
 
 .index-text {
   display: flex;
@@ -147,10 +164,8 @@ body {
   color: orange;
 }
 
-
 @media all and (max-width: 630px) {
- 
- /* Navbar */
+  /* Navbar */
   .navbar {
     width: 100%;
   }
@@ -158,11 +173,11 @@ body {
   .logo img {
     margin: 10px;
     height: 40px;
-    width: 40px; 
+    width: 40px;
   }
 
   .title {
-    color: #FFF;
+    color: #fff;
     font-family: Inter, sans-serif;
     font-size: 26px;
     font-style: normal;
@@ -170,7 +185,7 @@ body {
     line-height: 2.2;
   }
 
-    /* End of Navbar */
+  /* End of Navbar */
 
   .index-image {
     max-width: 60%;
